add entry deletion endpoint
